<resources>

    <!-- App -->
    <string name="app_name">Jaboog</string>
    <string name="app_id">750736924665</string>
    <string name="package_name">com.corbel.pierre.jb</string>
    <string name="license_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAlByeMiJlzoKNPZt8g5b/PSSoNf0uUbzEFEZARIHy3XxKBia2u4lk3QEuFYhQgK/jtIUW8yHm0Iru1sK+6NzHpxHudFbRzpZFDVYuTTW57wfwopjUwRZnx2wH8p922Xd75PwfY7UcXi/oZ9yOIx+AuKWaFqpt0h5bjdXkDSkNfIYC399T6eRb///xF8yZNtH25jk+/62Y6Hi2KQ8c6awIoBpB1tfoh5jwmiWfM6QLipDQIR+9fzUI5WfbKSsscLSuI7diEWtykMef7t/lgEYqKdtl2GnPfrw/lBZDBIYQoYnxORisEq2sov88nYIc5Y9H1mNLmvDmo2YZrUFJyoM09QIDAQAB</string>

    <!-- Server -->
    <string name="server_version">https://raw.githubusercontent.com/Corbichon/jaboog/master/appserver/current/version.txt</string>
    <string name="server_archive">https://raw.githubusercontent.com/Corbichon/jaboog/master/appserver/current/archive.txt</string>
    <string name="server_alpha">https://raw.githubusercontent.com/Corbichon/jaboog/master/appserver/alpha/serie.txt</string>
    <string name="server_photo">https://raw.githubusercontent.com/Corbichon/jaboog/master/appserver/bin/photo.jpg</string>


    <!-- In-App-Purchase -->
    <string name="noads">com.corbel.pierre.jb.noads</string>
    <string name="littleheart">com.corbel.pierre.jb.littleheart</string>
    <string name="bigheart">com.corbel.pierre.jb.bigheart</string>
    <string name="premium">com.corbel.pierre.jb.premium</string>
    <string name="iap_jokers_left">Plus que %1$d jokers !</string>
    <string name="iap_no_ad_text">Pas de publicité</string>
    <string name="iap_no_ad_price">0,99€</string>
    <string name="iap_premium_text">Compte Premium</string>
    <string name="iap_premium_price">1,99€</string>
    <string name="iap_joker_25_text">Pack de 25 jokers</string>
    <string name="iap_joker_25_price">0,99€</string>
    <string name="iap_joker_50_text">Pack de 50 jokers</string>
    <string name="iap_joker_50_price">1,99€</string>
    <string name="iap_title">Boutique</string>

    <!-- Home -->
    <string name="home_serie">%1$s : %2$d/30</string>

    <!-- Nav Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_settings">Paramètres</string>
    <string name="navigation_drawer_update">Mettre à jour</string>
    <string name="navigation_drawer_rate">Noter l\'application</string>
    <string name="navigation_drawer_about">A propos</string>
    <string name="navigation_drawer_help">Aide</string>
    <string name="navigation_drawer_profil">Statistiques</string>

    <!-- Toolbar -->
    <string name="action_settings">Settings</string>

    <!-- AdMob -->
    <string name="ad_app_id">ca-app-pub-6354884509423536~5832205603</string>
    <string name="ad_unit_id">ca-app-pub-6354884509423536/9643296407</string>
    <string name="ad_nexus_5_id">B386017A1F5576942E3BE918378DE40E</string>
    <string name="ad_nexus_5_X_id">8323FDF4AD196B3C0B0726EF43E2ABDF</string>

    <!-- Shortcut -->
    <string name="shortcut_home_short_label">Home</string>
    <string name="shortcut_home_long_label">Home</string>
    <string name="shortcut_home_disabled_label"></string>
    <string name="shortcut_quiz_short_label">Quiz</string>
    <string name="shortcut_quiz_long_label">Quiz</string>
    <string name="shortcut_quiz_disabled_label"></string>
    <string name="shortcut_archive_short_label">Séries</string>
    <string name="shortcut_archive_long_label">Séries</string>
    <string name="shortcut_archive_disabled_label"></string>

    <!-- Misc -->
    <string name="update_success">Questions mise à jour avec succès</string>
    <string name="internet_failed">Veuillez vérifier votre connexion à Internet…</string>
    <string name="rate_app">Souhaitez-vous noter l\'application ?</string>
    <string name="archive_success">Séries disponibles mise à jour avec succès</string>

    <!-- Profile -->
    <string name="profile_played_game">Parties jouées</string>
    <string name="profile_finished_game">Parties terminées</string>
    <string name="profile_answered_question">Questions répondues</string>
    <string name="profile_joker_used">Jokers utilisés</string>
    <string name="profile_joker_available">Jokers disponibles</string>
    <string name="profile_best_score">Meilleur score</string>
    <string name="profile_stats_viewed">Vue des stats</string>
    <string name="profile_number_info">%1$d</string>

    <!-- Quiz -->
    <string name="quiz_time_left">4:00</string>
    <string name="quiz_score">Score : %1$d</string>
    <string name="quiz_question_id">Question : %1$d/30</string>
    <string name="quiz_simple_question_id">%1$d/30</string>
    <string name="quiz_jokers_left">%1$d Jokers disponibles</string>
    <string name="quiz_continue">Continuer ?</string>
    <string name="quiz_joker_load">Charger un joker?</string>
    <string name="quiz_joker_already_loaded">Le joker est déjà chargé au maximum!</string>
    <string name="quiz_no_joker_left">Il ne vous reste plus de jokers...</string>

    <!-- Tuto -->
    <string name="tuto_question">Saurez-vous répondre à 30 questions d\'actualité en moins de 4 minutes ?</string>
    <string name="tuto_shuffle">Ces 30 questions sont mélangées toutes les 3 parties.</string>
    <string name="tuto_news">Actualités</string>
    <string name="tuto_update">Les questions sont mises à jour tous les lundis matin.</string>
    <string name="tuto_ready">Prêt à faire chauffer votre matière grise et briller à la machine à café ?</string>
    <string name="tuto_joker">Sinon, c\'est la fin de la partie !</string>
    <string name="tuto_win_joker">Quatre bonnes réponses de suite vous donne le droit à une réponse fausse.</string>

    <!-- About -->
    <string name="about_author">Auteur : Gabriel CHEBROU</string>
    <string name="about_developer">Développeur : Pierre CORBEL</string>
    <string name="about_music">Musique : www.bensound.com</string>
    <string name="about_bensoud">http://www.bensound.com</string>
    <string name="about_lib">Librairies</string>

    <!-- Archive -->
    <string name="arch_high_score">Score : %1$d</string>
    <string name="arch_progress">Question : %1$d/30</string>

    <!-- Finish -->
    <string name="finish_time_left">Temps restant : %1$s</string>

    <!-- Game Helper -->
    <string name="gamehelper_sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="gamehelper_app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="gamehelper_license_failed">License check failed.</string>
    <string name="gamehelper_unknown_error">Unknown error.</string>

    <!-- Skeleton -->
    <string name="hello_world">Hello world!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to our skeleton app!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>

</resources>