<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account_circle"
            android:title="@string/navigation_drawer_profil" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/navigation_drawer_settings" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/download"
            android:title="@string/navigation_drawer_update" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/google_play"
            android:title="@string/navigation_drawer_rate" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_circle"
            android:title="@string/navigation_drawer_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/information"
            android:title="@string/navigation_drawer_about" />
    </group>

</menu>