<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:background="@color/material_color_teal_500" />

    <android.support.v7.widget.CardView
        android:id="@+id/buy_card_view"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp">

        <com.corbel.pierre.jb.lib.AutoResizeTextView
            android:id="@+id/buy_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/iap_title"
            android:textSize="30sp" />
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:background="@color/material_color_teal_500" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@id/buy_card_view"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:divider="@color/material_color_white"
            android:padding="@dimen/activity_vertical_margin"
            android:showDividers="middle"
            android:stretchColumns="*">

            <TableRow android:id="@+id/premium_table_row">

                <com.corbel.pierre.jb.lib.AutoResizeTextView
                    android:id="@+id/premium_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/iap_premium_text"
                    android:textSize="20sp" />

                <com.corbel.pierre.jb.lib.AutoResizeTextView
                    android:id="@+id/premium_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:maxLines="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/iap_premium_price"
                    android:textSize="20sp" />
            </TableRow>

            <include layout="@layout/table_separator" />

            <TableRow android:id="@+id/no_ad_table_row">

                <com.corbel.pierre.jb.lib.AutoResizeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/iap_no_ad_text"
                    android:textSize="20sp" />

                <com.corbel.pierre.jb.lib.AutoResizeTextView
                    android:id="@+id/no_ad_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:maxLines="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/iap_no_ad_price"
                    android:textSize="20sp" />
            </TableRow>

            <include layout="@layout/table_separator" />

            <TableRow android:id="@+id/joker_25_table_row">

                <com.corbel.pierre.jb.lib.AutoResizeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/iap_joker_25_text"
                    android:textSize="20sp" />

                <com.corbel.pierre.jb.lib.AutoResizeTextView
                    android:id="@+id/joker_25_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:maxLines="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/iap_joker_25_price"
                    android:textSize="20sp" />
            </TableRow>

            <include layout="@layout/table_separator" />

            <TableRow android:id="@+id/joker_50_table_row">

                <com.corbel.pierre.jb.lib.AutoResizeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/iap_joker_50_text"
                    android:textSize="20sp" />

                <com.corbel.pierre.jb.lib.AutoResizeTextView
                    android:id="@+id/joker_50_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:maxLines="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:text="@string/iap_joker_50_price"
                    android:textSize="20sp" />
            </TableRow>

            <include layout="@layout/table_separator" />

        </TableLayout>
    </ScrollView>

    <com.corbel.pierre.jb.view.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="26dp"
        app:srcCompat="@drawable/home"
        app:fab_colorNormal="@color/material_color_red_accent_700" />

    <com.corbel.pierre.jb.lib.AutoResizeTextView
        android:id="@+id/jokers_left_text_view"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:lines="1"
        android:text="@string/iap_jokers_left"
        android:textColor="@color/material_color_white"
        android:textSize="20sp" />

</RelativeLayout>